--- a/fibonacci/doubleFibonacci.yaml
+++ b/fibonacci/doubleFibonacci.yaml
@@ -1,47 +1,32 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: ReplicaSet
 metadata:
-  name: fibonacci-wasm1
+  name: fibonacci
 spec:
-  nodeSelector:
-    kubernetes.io/arch: wasm32-wasi
-  containers:
-  - name: fibonacci-wasm
-    image: ghcr.io/nao-ri/fibonacci-wasm:1.0
-    imagePullPolicy: Always
-  imagePullSecrets:
-    - name: dockerconfigjson-github-com
-  tolerations:
-  - effect: NoExecute
-    key: kubernetes.io/arch
-    operator: Equal
-    value: wasm32-wasi
-  - effect: NoSchedule
-    key: kubernetes.io/arch
-    operator: Equal
-    value: wasm32-wasi
+  replicas: 2
+  selector:
+    matchLabels:
+      app: wasm
 
----
-
-apiVersion: v1
-kind: Pod
-metadata:
-  name: fibonacci-wasm2
-spec:
-  nodeSelector:
-    kubernetes.io/arch: wasm32-wasi
-  containers:
-  - name: fibonacci-wasm
-    image: ghcr.io/nao-ri/fibonacci-wasm:1.0
-    imagePullPolicy: Always
-  imagePullSecrets:
-    - name: dockerconfigjson-github-com
-  tolerations:
-  - effect: NoExecute
-    key: kubernetes.io/arch
-    operator: Equal
-    value: wasm32-wasi
-  - effect: NoSchedule
-    key: kubernetes.io/arch
-    operator: Equal
-    value: wasm32-wasi
+  template:
+    metadata:
+      labels:
+        app: wasm
+    spec:
+      nodeSelector:
+        kubernetes.io/arch: wasm32-wasi
+      containers:
+      - name: fibonacci-wasm
+        image: ghcr.io/nao-ri/fibonacci-wasm:1.0
+        imagePullPolicy: Always
+      imagePullSecrets:
+        - name: dockerconfigjson-github-com
+      tolerations:
+      - effect: NoExecute
+        key: kubernetes.io/arch
+        operator: Equal
+        value: wasm32-wasi
+      - effect: NoSchedule
+        key: kubernetes.io/arch
+        operator: Equal
+        value: wasm32-wasi
